Fix disappearing scrollbar, connect pages.

--- a/app/(main)/layout.css
+++ b/app/(main)/layout.css
@@ -40,6 +40,18 @@
     gap: 1.5rem;
 }
 
+.main-navbar-title-btn {
+    background: none;
+    color: #fff;
+    border: none;
+    border-radius: 5px;
+    font-size: 1.8rem;
+    font-weight: 700;
+    padding: 0.75rem 1rem;
+    cursor: pointer;
+    white-space: nowrap;
+}
+
 .main-navbar-action-btn {
     background: none;
     color: #fff;
