--- a/app/(main)/map/page.css
+++ b/app/(main)/map/page.css
@@ -1,11 +1,3 @@
-html, body, #__next {
-    width: 100vw;
-    height: 100vh;
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
-}
-
 .map-page-container {
     position: fixed;
     top: 0;
